--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <br>
   <h2>Tell me about yourself</h2>
     <ul>
-      <li>Like Reading chinese Novels <a href="wuxiaworld.com">click here</a></li>
-      <li>also like to read manga <a href="kissmanga.com">Click here</a></li>
+      <li>Like Reading chinese Novels <a href="https://wuxiaworld.com">click here</a></li>
+      <li>also like to read manga <a href="https://kissmanga.com">Click here</a></li>
       <li>Playing Video games</li>
       <li>still lost which path will i take</li>
     </ul>
